[gd_scene load_steps=5 format=1]

[ext_resource path="res://UI/StartMenu/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/fondlogo.jpg" type="Texture" id=2]
[ext_resource path="res://UI/Style/Theme-Buttons-little.tres" type="Theme" id=3]
[ext_resource path="res://Musics/zic de fond vfinale.ogg" type="AudioStream" id=4]

[node name="StartMenu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -702.0
margin/top = -21.0
margin/right = 1660.0
margin/bottom = 1091.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="CheckBox" type="ButtonGroup" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 428.0
margin/top = 279.0
margin/right = 520.0
margin/bottom = 335.0
alignment = 0

[node name="Fr" type="CheckBox" parent="CheckBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 92.0
margin/bottom = 28.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
is_pressed = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "Fran√ßais"
flat = false
align = 0

[node name="En" type="CheckBox" parent="CheckBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 28.0
margin/right = 92.0
margin/bottom = 56.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "English"
flat = false
align = 0

[node name="Start" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 426.0
margin/top = 349.0
margin/right = 526.0
margin/bottom = 374.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="Quit" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 3 )
margin/left = 425.0
margin/top = 381.0
margin/right = 525.0
margin/bottom = 406.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="Loading" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 426.0
margin/top = 423.0
margin/right = 525.0
margin/bottom = 444.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 4 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="CheckBox/Fr" to="." method="_on_Fr_pressed"]

[connection signal="pressed" from="CheckBox/En" to="." method="_on_En_pressed"]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]


